--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:icon="@drawable/icon_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.NoActionBar">
+        android:largeHeap="true"
+        android:theme="@android:style/Theme.DeviceDefault.Light.NoActionBar.Fullscreen">
         <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
 
         <activity android:name="com.facebook.FacebookActivity"
@@ -57,6 +58,8 @@
         <activity android:name=".Activity_Agree"/>
         <activity android:name=".Activity_disagree"/>
         <activity android:name=".Activity_Result"/>
+        <activity android:name=".Activity_SearchMain"/>
+        <activity android:name="Activity_PopUp" android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen"/>
     </application>
 
 </manifest>
