--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,8 +22,8 @@
                 "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name" />
 
-        <activity android:name="com.lmasi.lmasi.yous.Activity_home"/>
-        <activity android:name="com.lmasi.lmasi.yous.Activity_Start">
+        <activity android:name="com.lmasi.yous.Activity_home"/>
+        <activity android:name="com.lmasi.yous.Activity_Start">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -31,13 +31,13 @@
             </intent-filter>
         </activity>
 
-        <activity android:name="com.lmasi.lmasi.yous.MainActivity">
+        <activity android:name="com.lmasi.yous.MainActivity">
 
         </activity>
 
-        <activity android:name="com.lmasi.lmasi.yous.Activity_Login"/>
-        <activity android:name="com.lmasi.lmasi.yous.Activity_SignUp"/>
-        <activity android:name="com.lmasi.lmasi.yous.Activity_SignUp2"
+        <activity android:name="com.lmasi.yous.Activity_Login"/>
+        <activity android:name="com.lmasi.yous.Activity_SignUp"/>
+        <activity android:name="com.lmasi.yous.Activity_SignUp2"
             android:exported="true">
 
             <intent-filter>
@@ -49,18 +49,18 @@
 
         </activity>
 
-        <activity android:name="com.lmasi.lmasi.yous.Activity_Main">
+        <activity android:name="com.lmasi.yous.Activity_Main">
 
 
 
         </activity>
 
-        <activity android:name="com.lmasi.lmasi.yous.Activity_Summary"/>
-        <activity android:name="com.lmasi.lmasi.yous.Activity_Agree"/>
-        <activity android:name="com.lmasi.lmasi.yous.Activity_disagree"/>
-        <activity android:name="com.lmasi.lmasi.yous.Activity_Result"/>
-        <activity android:name="com.lmasi.lmasi.yous.Activity_SearchMain"/>
-        <activity android:name="com.lmasi.lmasi.yous.Activity_PopUp" android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen"/>
+        <activity android:name="com.lmasi.yous.Activity_Summary"/>
+        <activity android:name="com.lmasi.yous.Activity_Agree"/>
+        <activity android:name="com.lmasi.yous.Activity_disagree"/>
+        <activity android:name="com.lmasi.yous.Activity_Result"/>
+        <activity android:name="com.lmasi.yous.Activity_SearchMain"/>
+        <activity android:name="com.lmasi.yous.Activity_PopUp" android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen"/>
     </application>
 
 </manifest>
